syntax = "proto3";

package pvz.v1;

option go_package = "github.com/webbsalad/pvz/pvz_v1;pvz_v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service PVZService {
  rpc CreatePVZ(CreatePVZRequest) returns (CreatePVZResponse) {
    option (google.api.http) = {
        post: "/pvz",
        body: "*"
    };
  };

  rpc GetPVZList(GetPVZListRequest) returns (GetPVZListResponse);

  rpc GetPVZIntervalList(GetPVZIntervalListRequest) returns (GetPVZIntervalListResponse) {
    option (google.api.http) = {
        get: "/pvz"
        response_body: "pvzs"
    };
  };
}

message PVZ {
  string id = 1;
  google.protobuf.Timestamp registration_date = 2;
  string city = 3;
}

enum ReceptionStatus {
  RECEPTION_STATUS_IN_PROGRESS = 0;
  RECEPTION_STATUS_CLOSED = 1;
}

message GetPVZListRequest {}

message GetPVZListResponse {
  repeated PVZ pvzs = 1;
}

message CreatePVZRequest {
  string id = 1 [(validate.rules).string.uuid = true];
  google.protobuf.Timestamp registration_date = 2;
  string city = 3;
}

message CreatePVZResponse {
  string id = 1 [(validate.rules).string.uuid = true];
  google.protobuf.Timestamp registration_date = 2;
  string city = 3;
}

message GetPVZIntervalListRequest {
  optional google.protobuf.Timestamp startDate = 1;
  optional google.protobuf.Timestamp endDate = 2;
  optional int32 page = 3;
  optional int32 limit = 4;
}

message GetPVZIntervalListResponse {
  repeated PVZWithReceptions pvzs = 1;
}



message PVZWithReceptions {
  PVZ pvz = 1;
  repeated ReceptionWithProducts receptions = 2;
}

message ReceptionWithProducts {
  Reception reception = 1;
  repeated Product products = 2;
}

message Reception {
  string id = 1 [(validate.rules).string.uuid = true];
  google.protobuf.Timestamp dateTime = 2;
  string pvzID = 3 [(validate.rules).string.uuid = true];
  string status = 4;
}

message Product {
  string id = 1 [(validate.rules).string.uuid = true];
  google.protobuf.Timestamp dateTime = 2;
  string type = 3;
  string receptionId = 4 [(validate.rules).string.uuid = true];
}
